# CPU_Emulatorr

./: CMakeLists.txt  main.cpp  program  vedro
lib/: CMakeLists.txt
lib/include/: CPU.hpp  Commands.hpp  Parser.hpp  Stack.hpp  program.hpp
lib/src/: CPU.cpp  Commands.cpp  Parser.cpp  program.cpp
lib/test/: test.cpp
